prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/async_missing_await_var.diag.txt
ERROR: call to async function returns a Future, not 'int'; did you mean 'await f(...)'?
testData/diagnostics/async_missing_await_var.nut:13:2

async function main() {
  let n: int = f()
  ^---------------
  print(n)


